# Desafio-Relatorio-de-Pagamentos

./: MANIFEST.in  README.md  pyproject.toml
data/output/: amostra_relatorio_2025.csv
data/output/relatorio_pedidos_2025_parquet/: .part-00000-79f93e7d-6182-4fcf-9008-30b07a2c920e-c000.snappy.parquet.crc  part-00000-79f93e7d-6182-4fcf-9008-30b07a2c920e-c000.snappy.parquet
src/: main.py
src/ads_client/business/: sales_report_service.py
src/ads_client/config/: app_config.py
src/ads_client/io/: data_reader.py  data_writer.py
src/ads_client/pipeline/: sales_report_pipeline.py
src/ads_client/schemas/: pagamentos_schema.py  pedidos_schema.py
src/ads_client/spark/: spark_session_manager.py
tests/: conftest.py  test_sales_report_service.py
