[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ads-client"
version = "0.1.0"
description = "Relatório PySpark de pedidos 2025 com pagamentos recusados e avaliação legítima."
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["pyspark==3.5.1"]

[project.optional-dependencies]
test = ["pytest==8.2.2"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
